// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GasSettings > renders the GasSettings component closed 1`] = `
<div
  class="operation__gas-settings s-viaBXp9UetOS"
>
  <dl
    class="operation__gas-settings-edit s-viaBXp9UetOS"
  >
    <dt
      class="dusk-status-list__key s-viaBXp9UetOS"
    >
      <svg
        class="dusk-icon dusk-icon--size--normal"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.77,7.23L19.78,7.22L16.06,3.5L15,4.56L17.11,6.67C16.17,7.03 15.5,7.93 15.5,9A2.5,2.5 0 0,0 18,11.5C18.36,11.5 18.69,11.42 19,11.29V18.5A1,1 0 0,1 18,19.5A1,1 0 0,1 17,18.5V14A2,2 0 0,0 15,12H14V5A2,2 0 0,0 12,3H6A2,2 0 0,0 4,5V21H14V13.5H15.5V18.5A2.5,2.5 0 0,0 18,21A2.5,2.5 0 0,0 20.5,18.5V9C20.5,8.31 20.22,7.68 19.77,7.23M12,13.5V19H6V12H12V13.5M12,10H6V5H12V10M18,10A1,1 0 0,1 17,9A1,1 0 0,1 18,8A1,1 0 0,1 19,9A1,1 0 0,1 18,10Z"
        />
      </svg>
      
      <!--&lt;Icon&gt;-->
       
      <span
        class="s-viaBXp9UetOS"
      >
        Default Gas Settings
      </span>
       
    </dt>
    <dd
      class="s-viaBXp9UetOS"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          EDIT
        </span>
      </button>
      <!--&lt;Button&gt;-->
    </dd>
  </dl>
   
</div>
`;

exports[`GasSettings > renders the GasSettings component opened 1`] = `
<div
  class="operation__gas-settings s-viaBXp9UetOS"
>
  <dl
    class="operation__gas-settings-edit s-viaBXp9UetOS"
  >
    <dt
      class="dusk-status-list__key s-viaBXp9UetOS"
    >
      <svg
        class="dusk-icon dusk-icon--size--normal"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.77,7.23L19.78,7.22L16.06,3.5L15,4.56L17.11,6.67C16.17,7.03 15.5,7.93 15.5,9A2.5,2.5 0 0,0 18,11.5C18.36,11.5 18.69,11.42 19,11.29V18.5A1,1 0 0,1 18,19.5A1,1 0 0,1 17,18.5V14A2,2 0 0,0 15,12H14V5A2,2 0 0,0 12,3H6A2,2 0 0,0 4,5V21H14V13.5H15.5V18.5A2.5,2.5 0 0,0 18,21A2.5,2.5 0 0,0 20.5,18.5V9C20.5,8.31 20.22,7.68 19.77,7.23M12,13.5V19H6V12H12V13.5M12,10H6V5H12V10M18,10A1,1 0 0,1 17,9A1,1 0 0,1 18,8A1,1 0 0,1 19,9A1,1 0 0,1 18,10Z"
        />
      </svg>
      
      <!--&lt;Icon&gt;-->
       
      <span
        class="s-viaBXp9UetOS"
      >
        Default Gas Settings
      </span>
       
    </dt>
    <dd
      class="s-viaBXp9UetOS"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--small"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          CLOSE
        </span>
      </button>
      <!--&lt;Button&gt;-->
    </dd>
  </dl>
   
  <div
    class="operation__gas-settings s-viaBXp9UetOS"
    style="animation: __svelte_276924520_0 400ms linear 0ms 1 both;"
  >
    <label
      class="gas-control s-POS_LBjGgkOM"
    >
      <span
        class="gas-control__label s-POS_LBjGgkOM"
      >
        Price (in Lux, integers between 
        1
        
		and 
        20.000.000
        )
      </span>
       
      <input
        class="dusk-textbox dusk-textbox-number gas-control__input"
        max="20000000"
        min="1"
        required=""
        type="number"
      />
      
      <!--&lt;Textbox&gt;-->
    </label>
     
    <label
      class="gas-control s-POS_LBjGgkOM"
    >
      <span
        class="gas-control__label s-POS_LBjGgkOM"
      >
        Limit (integers between 
        10.000.000
        
		and 
        1.000.000.000
        )
      </span>
       
      <input
        class="dusk-textbox dusk-textbox-number gas-control__input"
        max="1000000000"
        min="10000000"
        required=""
        type="number"
      />
      
      <!--&lt;Textbox&gt;-->
    </label>
    <!--&lt;GasControls&gt;-->
  </div>
</div>
`;
